# txxt_server

./: .env  Cargo.toml  dealer.sqlite
app/: Cargo.toml
app/src/: main.rs
app/src/entity/: mod.rs  msg_payload.rs  msg_req.rs  msg_res.rs  msg_type.rs
app/src/handler/: mod.rs  msg_handler.rs  msg_handler_t1.rs  msg_handler_t2.rs  msg_processor.rs
app/src/protocol/: mod.rs
app/src/protocol/definition/: mod.rs  packet_payload.rs  packet_request.rs  packet_type.rs
app/src/protocol/handler/: mod.rs  packet_handler.rs  payload_one_handler.rs  payload_two_handler.rs  test_one_handler.rs  test_two_handler.rs
app/src/protocol/payload/: mod.rs  packet_payload.rs  packet_type.rs  test_one.rs  test_two.rs
app/src/protocol/processor/: mod.rs  packet_processor.rs
common/: Cargo.toml
common/src/global/: mod.rs
dbs/: Cargo.toml
dbs/src/: lib.rs  main.rs
dbs/src/dao/: mod.rs  table_board_dao.rs
dbs/src/migrate/: migrate.rs  mod.rs
dbs/src/model/: mod.rs  table_board.rs
dealer/: Cargo.toml
dealer-cli/: Cargo.toml
dealer-cli/src/: app.rs  dealer_client.rs  main.rs  ui.rs
dealer-cli/src/app/: app.rs  app_data.rs  mod.rs
dealer-cli/src/log/: circular_buffer.rs  log.rs  mod.rs
dealer-cli/src/net/: business_api.rs  dealer_client.rs  mod.rs
dealer-cli/src/widget/: connect_widget.rs  control_widget.rs  info_widget.rs  log_widget.rs  mod.rs  state_widget.rs  util.rs  view_widget.rs
dealer-cli/t/: app.rs
dealer/src/protocol/: mod.rs
dealer/src/protocol/connection/: client_connection.rs  mod.rs
dealer/src/protocol/definition/: mod.rs  packet_request.rs
dealer/src/protocol/handler/: login_handler.rs  mod.rs
dealer/src/protocol/payload/: login.rs  mod.rs
dealer/src/protocol/processor/: mod.rs  packet_processor.rs
dealer/src/service/: mod.rs  sys_user_service.rs
