[workspace]
members = ["common", "app", "dealer", "dbs"]
resolver = "2"

[workspace.dependencies]
dotenv = "0.15.0"
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.214", features = ["derive"] }
bytes = "1.8.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
url = "2.5.3"


