[workspace]
members = ["common", "app", "dealer", "dbs", "dealer-cli"]
resolver = "2"

[workspace.dependencies]
# 数据库ORM
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
# 网络相关库
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
bytes = "1.8.0"
url = "2.5.3"
# 工具库
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
md5 = { version = "0.7.0" }
rs-snowflake = "0.6.0"
