[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true , features = ["full"]}
tokio-util = { workspace = true }
futures-util = "0.3"
# dotenv = { workspace = true }
# sea-orm = { workspace = true }
# common = {path = "../common"}
# dealer = {path = "../dealer"}
# dbs ={ path = "../dbs"}