[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true , features = ["full"]}
tokio-util = { workspace = true }
futures-util = { workspace = true }
# dotenv = { workspace = true }
# sea-orm = { workspace = true }
# common = {path = "../common"}
# dealer = {path = "../dealer"}
# dbs ={ path = "../dbs"}