[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dealer = { path = "../dealer" }
common = { path = "../common" }

rs-snowflake = { workspace = true }
dotenv = { workspace = true }