[package]
name = "dealer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = {version = "0.19.0"}
crossterm = {version = "0.28.1"}
#common = {path = "../common"}
#dbs = {path = "../dbs"}
#
#sea-orm = { workspace = true }
#bytes = { workspace = true }
#tokio = { workspace = true, features = ["full"] }
#tokio-util = { workspace = true }
#futures-util = { workspace = true }
#serde = { workspace = true }
#serde_json = { workspace = true }
#clap = { version = "4", features = ["derive"] }