[package]
name = "dealer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
dealer = { path = "../dealer" }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossbeam ={ version = "0.8.4"}
chrono ={ version = "0.4.38"}