[package]
name = "dealer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
dbs = {path = "../dbs"}

sea-orm = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
